# cubes

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  README.md  arrow_item.cpp  arrow_item.h  common_interface_definitions.h  conanfile.txt  deploy_windows_debug.cmd.in  deploy_windows_release.cmd.in  diagram_item.cpp  diagram_item.h  diagram_scene.cpp  diagram_scene.h  diagram_view.cpp  diagram_view.h  drag_widget.cpp  drag_widget.h  file_item.cpp  file_item.h  file_items_manager.h  file_items_manager_api.h  file_items_manager_interface.h  files_item.cpp  files_item.h  files_types.h  graph.h  group_item.cpp  group_item.h  icon.base64  log_table_model.cpp  log_table_model.h  main.cpp  main_window.cpp  main_window.h  parameters_compiler_helper.h  properties_editor.h  properties_item.cpp  properties_item.h  (+17 more)
doc/: classes.vsdx  description.docx
patch/QtPropertyBrowser/src/: qteditorfactory.cpp  qteditorfactory.h  qtpropertymanager.cpp  qtpropertymanager.h
patches/submodules/QtPropertyBrowser/: CMakeLists.txt
patches/submodules/QtPropertyBrowser/cmake/: InstallProjectConfig.cmake
patches/submodules/QtPropertyBrowser/src/: qttreepropertybrowser.cpp
src/: array_window.cpp  array_window.h  diagram_item.cpp  diagram_item.h  diagram_scene.cpp  diagram_scene.h  diagram_view.cpp  diagram_view.h  graph.h  main.cpp  main_window.cpp  main_window.h  mock_window.cpp  mock_window.h  properties_editor.h  top_manager.cpp  top_manager.h  top_manager_interface.h  top_manager_types.h  tree_item_model.cpp  tree_item_model.h  unit_types.h  xml_parser.cpp  xml_parser.h  zip.cpp  zip.h
src/analysis/: analysis_manager.cpp  analysis_manager.h  analysis_manager_interface.h  analysis_types.h  file_items_analysis.cpp  file_items_analysis.h  properties_items_analysis.cpp  properties_items_analysis.h
src/diagram/: diagram_item.cpp  diagram_item.h  diagram_item_types.h  diagram_scene.cpp  diagram_scene.h  diagram_view.cpp  diagram_view.h
src/file/: file_item.cpp  file_item.h  file_item_types.h  file_items_manager.cpp  file_items_manager.h  file_items_manager_interface.h
src/file_item/: file_item.cpp  file_item.h  file_item_types.h  file_items_manager.cpp  file_items_manager.h  file_items_manager_interface.h
src/log/: log_helper.h  log_manager_interface.h  log_table_model.cpp  log_table_model.h  log_table_types.h  log_types.h  sort_filter_model.h
src/log_table/: log_table_interface.h  log_table_model.cpp  log_table_model.h  sort_filter_model.cpp  sort_filter_model.h
src/parameters/: variant_converter.h
src/parameters_compiler/: parameters_compiler_helper.h  variant_converter.h
src/properties/: properties_item.cpp  properties_item.h  properties_item_types.h  properties_items_manager.cpp  properties_items_manager.h  properties_items_manager_interface.h
src/properties_item/: properties_item.cpp  properties_item.h  properties_item_types.h  properties_items_manager.cpp  properties_items_manager.h  properties_items_manager_interface.h  properties_manager_interface.h
src/property_browser/: properties_editor.cpp  properties_editor.h  qtexeditorfactory.cpp  qtexeditorfactory.h  qtexpropertymanager.cpp  qtexpropertymanager.h
src/top/: top_manager.cpp  top_manager.h  top_manager_interface.h  top_manager_types.h
src/tree/: tree_item_model.h
src/unit/: unit_helper.cpp  unit_helper.h  unit_parameter_model.h  unit_parameter_model_id.h  unit_parameter_model_ids.h  unit_types.h
src/utils/: graph.h  zip.cpp  zip.h
src/windows/: array_window.cpp  array_window.h  main_window.cpp  main_window.h
src/xml/: xml_helper.cpp  xml_helper.h  xml_parser.cpp  xml_parser.h  xml_types.h  xml_writer.cpp  xml_writer.h
test/: CMakeLists.txt
test/resources/FileAnalysis/NameNotUnique/: config1.xml  config2.xml
test/resources/FileAnalysis/NameNotUnique/units/windows_x64_vc143/yml/: test1.yml
test/resources/XmlParser/FileParseFailed/: config1.xml
test/resources/XmlParser/GetArrayFailed/: config1.xml
test/resources/XmlParser/GetConfigChildUnknown/: config1.xml
test/resources/XmlParser/GetDependsFailed/: config1.xml
test/resources/XmlParser/GetLogFailed/: config1.xml
test/resources/XmlParser/GetNetworkingFailed/: config1.xml
test/resources/XmlParser/GetUnitFailed/: config1.xml
test/resources/XmlParser/GetUnitsFailed/: config1.xml
test/resources/XmlParser/GroupParamNotFound/: config1.xml
test/resources/XmlParser/GroupParamNotSingle/: config1.xml
test/resources/XmlParser/GroupParamUnknown/: config1.xml
test/resources/XmlParser/IncludesChildUnknown/: config1.xml
test/resources/XmlParser/IncludesIncludeValEmpty/: config1.xml  config2.xml
test/resources/XmlParser/IncludesIncludeVariableNameDuplicate/: config1.xml
test/resources/XmlParser/IncludesIncludeVariableNameEmpty/: config1.xml  config2.xml
test/resources/XmlParser/IncludesIncludeVariableValEmpty/: config1.xml  config2.xml
test/resources/XmlParser/LogChildUnknown/: config1.xml
test/resources/XmlParser/LogParamUnknown/: config1.xml
test/resources/XmlParser/NetworkingAcceptPortEmpty/: config1.xml  config2.xml
test/resources/XmlParser/NetworkingChildUnknown/: config1.xml
test/resources/XmlParser/NetworkingConnectIpEmpty/: config1.xml  config2.xml
test/resources/XmlParser/NetworkingConnectPortEmpty/: config1.xml  config2.xml
test/resources/XmlParser/NetworkingIdEmpty/: config1.xml  config2.xml
test/resources/XmlParser/NetworkingKeepAliveSecEmpty/: config1.xml  config2.xml
test/resources/XmlParser/UnitDependsItemEmpty/: config1.xml  config2.xml
test/resources/XmlParser/UnitIdEmpty/: config1.xml  config2.xml
test/resources/XmlParser/UnitNameEmpty/: config2.xml
test/resources/XmlParser/UnitParamNameEmpty/: config1.xml  config2.xml
test/resources/XmlParser/UnitParamTypeEmpty/: config1.xml  config2.xml
test/resources/XmlParser/UnitParamValEmpty/: config1.xml  config2.xml
test/resources/XmlWriter/FileOpenFailed/: config1.xml
test/resources/test1/: config1.xmlx
test/src/: file_analysis_tests.h  main.cpp  mock_window.cpp  mock_window.h  test.h  xml_parser_tests.h  xml_writer_tests.h
